# OpenCVCode

./: CMakeLists.txt  README  README.md
src/: ImgNoice.cpp  ImgNoice.hpp  ImgProcessor.cpp  ImgProcessor.hpp  ImgTest.cpp  ImgTest.hpp  main.cpp
test/: main.cpp
